<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_dark"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
   >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:padding="10dp"
        />





    <Button android:text="@string/spotify"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:background="@android:color/holo_orange_dark"
        android:id="@+id/first" />
    <Button android:text="@string/scores"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="4dp"

        android:background="@android:color/holo_orange_dark"

        android:id="@+id/second" />
    <Button android:text="@string/library"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="4dp"

        android:background="@android:color/holo_orange_dark"

        android:id="@+id/third" />
    <Button android:text="@string/bigger"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="4dp"

        android:background="@android:color/holo_orange_dark"

        android:id="@+id/fourth" />
    <Button android:text="@string/xyz"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_margin="4dp"

        android:textSize="20sp"
        android:background="@android:color/holo_orange_dark"

        android:id="@+id/fifth" />
    <Button android:text="@string/capstone"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_margin="4dp"

        android:background="@android:color/holo_red_light"

        android:textSize="20sp"
        android:id="@+id/sixth" />

</LinearLayout>
